# swagger-output.json
@@ -562,7 +562,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/products/{articuloId}/{imageId}": {
       "delete": {
         "tags": [
           "Products"
@@ -570,7 +572,15 @@
         "description": "",
         "parameters": [
           {
-            "name": "cod_articulo",
+            "name": "articuloId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "imageId",
             "in": "path",
             "required": true,
             "schema": {
